# resume-filter-chatbot

./: .env.example  .gitignore  README.md  pyproject.toml
app/: celery_app.py  main.py
app/api/routes/: chat.py  ingest.py  jobs.py
app/core/: config.py
app/db/: session.py
app/db/models/: __init__.py  file.py  job.py
app/schemas/: chat_ask.py  ingest.py  job.py
app/services/chat/: instructions.py  intent_classifier.py  pinecone_search.py  query_parser.py
app/services/gdrive/: client.py  downloader.py  listing.py  parse.py
app/services/llm/: groq_llm.py
app/services/processing/: chunking.py  embeddings.py  pdf_extract.py  text_extract.py
app/services/resume/: llm_profile_builder.py  profile_builder.py  profile_schema.py
app/services/vectors/: pinecone_client.py  upsert.py
app/tasks/: ingest.py
app/workers/: ingest_worker.py  queue.py
migrations/: env.py
migrations/versions/: 13332a9b932b_add_resume_profile_to_ingested_files.py  69dc4a4fd972_create_ingestion_jobs_and_files.py
scripts/: batch_resume_profile_llm.py
